--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<p style="font-size:120%;">Корнями история празднования Нового Года уходит в Месопотамию, где зародилась традиция отмечать весеннее пробуждение природы, происходило это в марте месяце. Уже тогда веселье длилось больше недели. Никто в эти дни не работал, люди ходили на гуляния и веселые маскарады.</p>	
 				<p style="font-size:120%;">Позже обычай встречать Новый Год переняли греки, затем египтяне и римляне, в России Новый Год не всегда отмечали в ночь с 31 декабря на 1 января.С появлением нового летоисчисления, связанного с крещением Руси, за праздником закрепилась дата 1 марта, позже она передвинулась на 1 сентября.</p>
 				<p style="font-size:120%;">В 1699 году царь Петр I издал указ о праздновании Нового Года 1 января. Это было сделано по примеру всех европейских стран, живших по григорианскому календарю.До настоящего времени праздник в России отмечают 1 января.</p>
-				<a href="file:///C:/Users/student/Desktop/сайт%20Шлепы/index1.html" >Подробнее узнать о традициях можно тут)</a>
+				<a href="index1.html" >Подробнее узнать о традициях можно тут)</a>
 			<p style="font-size:120%;"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Твой новогодний подарок, нажми
 				</a></p>	
 			<P><label for="messageField">Почта Деда Мороза</label><br>
