--- a/index1.html
+++ b/index1.html
@@ -31,7 +31,7 @@
 				<p style="font-size:120%;">Без аромата хвои трудно себе представить зимние торжества. Изначально еловыми и другими веточками украшали дом. Но позже Россия переняла обычаи Германии, и целое деревце начали ставить внутри жилища, в большой комнате. В ту пору не было такого количества украшений, и даже обычные игрушки были редкостью. Поэтому на ель вешали яблоки и свечи. Некоторые семьи использовали сладости – пряники и печенье с отверстием, в которое продевалась ниточка.</p>
 				<p style="font-size:120%;">Постепенно начали появляться игрушки и гирлянды. Они были все разных форм и размеров: домики, сосульки, гномы, куколки, шишки, разные животные и герои сказок. Гирлянды дети сами делали из цветной бумаги. А еще украшали елочку самодельными снежинками из белой бумаги и ваты. Красовались на елочке и конфеты в разноцветных фантиках. Двух одинаково наряженных красавиц невозможно было найти!</p>
 				<p style="font-size:120%;">Новогодние традиции меняются каждый год. Они появляются, живут, иногда умирают, а затем возрождаются вновь. Нужно не забывать их поддерживать каждый год и непременно передавать детям. Одна интересная история об обычаях Нового года не только запомнится малышам, но и может воодушевить создать свою традицию. Поддержите идеи ребенка. А еще будет полезно расспросить старших членов семьи, как отмечали они этот день в молодости.
-				<p><a href="file:///C:/Users/student/Desktop/сайт%20Шлепы/index.html"><a></p>
+				<p><a href="index.html">Вернуться<a></p>
 				<P><label for="messageField">Почта Деда Мороза</label><br>
 						<textarea name="message" id="messageField" cols="50" rows="10">Ваши пожелания</textarea>
 						<br>
